# cargo-xtest-data

./: Cargo.toml  Readme.md
.github/workflows/: ci.yml  release.yml
docs/: customization-points-for-packagers.md  goals-and-evaluation.md  known-problems.md  overview-of-mode-of-action.md  usage-for-repository-authors.md
src/: git.rs  lib.rs
